--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
 </head>
 <body>
 {{ render(controller(
-    'App\\Controller\\CatalogController::searchBar'
+    'App\\Controller\\DefaultController::header'
 )) }}
 {% block body %}{% endblock %}
 {% block javascripts %}
