--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
     <div class="container">
         <!-- Default form register -->
-        <form method="post" class="form-group col-md-6 offset-3 text-center border border-light p-5" action="#">
+        <form method="post" class="shadow-lg mt-md-5 form-group col-md-6 offset-3 text-center border border-light p-5" action="#">
             <h1>CREER UN COMPTE</h1>
             <p class="mb-4">Saisissez vos coordonnées ci dessous et suivez le processus pour créer un nouveau compte
                 avec
